--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TJ'
 - !lcsh 'Internal combustion engines'
+- GITenberg
 title: "Gas-Engines and Producer-Gas Plants\r\nA Practice Treatise Setting Forth the\
   \ Principles of Gas-Engines and Producer Design, the Selection and Installation\
   \ of an Engine, Conditions of Perfect Operation, Producer-Gas Engines and Their\
